// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frontmatter-markdown-loader react mode returns renderable React component 1`] = `
<div
  className="frontmatter-markdown"
>
  <h1>
    Title
  </h1>
  <p>
    GOOD 
    <code
      dangerouslySetInnerHTML={
        Object {
          "__html": "BYE",
        }
      }
    />
     FRIEND CHEERS
  </p>
  <pre>
    <code
      className="language-js"
      dangerouslySetInnerHTML={
        Object {
          "__html": "const multipleLine = true;
console.warn(multipleLine)
",
        }
      }
    />
  </pre>
</div>
`;

exports[`frontmatter-markdown-loader react mode returns renderable React component with accepting child components through props 1`] = `
<div
  className="frontmatter-markdown"
>
  <h1>
    Title
  </h1>
  <p>
    HELLO
    <strong>
      I am a child
    </strong>
  </p>
  <p>
    <i>
      I am another
    </i>
  </p>
  <p>
    <img
      alt="Awewsome Photo"
      src="/assets/awesome-photo.jpg"
    />
  </p>
</div>
`;

exports[`frontmatter-markdown-loader react mode returns renderable React component with expected root class 1`] = `
<div
  className="forReact"
>
  <h1>
    Title
  </h1>
  <p>
    GOOD 
    <code
      dangerouslySetInnerHTML={
        Object {
          "__html": "BYE",
        }
      }
    />
     FRIEND CHEERS
  </p>
  <pre>
    <code
      className="language-js"
      dangerouslySetInnerHTML={
        Object {
          "__html": "const multipleLine = true;
console.warn(multipleLine)
",
        }
      }
    />
  </pre>
</div>
`;
